--- a/ApplicationTracker/templates/apptrackpages/ViewAllApplications.html
+++ b/ApplicationTracker/templates/apptrackpages/ViewAllApplications.html
@@ -1,3 +1,60 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
-ViewAllApplications
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<h1 style='text-align:center;'><b>Your Applications</b></h1>
+<p style='text-align:center;'><a class='btn btn-primary' href='{% url "add"  %}'>Add New Appication</a></p>
+<div class="container-fluid px-4">
+    <div class="card mb-4">
+        <div class="card-header">
+            <i class="fas fa-table me-1"></i>
+            Applications
+        </div>
+        <div class="card-body">
+            <table id="datatablesSimple">
+                <thead>
+                    <tr>
+                        <th>Company Name</th>
+                        <th>Recruiter Name</th>
+                        <th>Recruiter Email</th>
+                        <th>Status</th>
+                        <th>Application Notes</th>
+                        <th>Estimated Salary</th>
+                        <th>Resume</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <th>Company Name</th>
+                        <th>Recruiter Name</th>
+                        <th>Recruiter Email</th>
+                        <th>Status</th>
+                        <th>Application Notes</th>
+                        <th>Estimated Salary</th>
+                        <th>Resume</th>
+                        <th>Actions</th>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    {% for application in app %}
+                    <tr>
+                        <td>{{ application.CompanyName }}</td>
+                        <td>{{ application.RecruiterName }}</td>
+                        <td>{{ application.RecruiterEmail }}</td>
+                        <td>{{ application.Status }}</td>
+                        <td>{{ application.ApplicationNotes }}</td>
+                        <td>{{ application.EstimatedSalary }}</td>
+                        <td>{{ application.ResumePDF }}</td>
+                        <td>
+                            <p><a class='btn btn-primary'
+                                    href='{% url "showsingleapplication" application_id=application.id %}'>Edit</a></p>
+                            <p><a class='btn btn-primary'
+                                    href='{% url "delete" application_id=application.id %}'>Delete</a></p>
+                        </td>
+                    </tr>
+                    {% endfor %}</tbody>
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock content %}
